--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 spring.jpa.show-sql = true
 
-spring.main.allow-bean-definition-overriding = true 
+spring.main.allow-bean-definition-overriding = true
+
+upload.path = D:/Programms/LibrarySystem/Files
